--- a/index/index.html
+++ b/index/index.html
@@ -17,37 +17,22 @@
     <link href='//fonts.googleapis.com/css?family=Jura:400,300,500,600' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <h1>Login and Registration Form</h1>
+    <h1>Optimizing Courier Delivery System</h1>
     <div class="main">
         <div class="w3">
             <div class="signin-form profile">
-                <h3>Login</h3>
+                <h3>Login To Your Account</h3>
 
                 <div class="login-form">
                     <form action="/" method="post">
                         <input type="text" name="logemail" placeholder="E-mail" required="">
                         <input type="password" name="logpassword" placeholder="Password" required="">
                         <div class="tp">
-                            <input type="submit" value="LOGIN NOW">
+                            <input type="submit" value="LOGIN">
+                            <a href="./register.html">Not Yet Registered... Create an account</a>
                         </div>
                     </form>
                 </div>
-            </div>
-        </div>
-        <div class="agile">
-            <div class="signin-form profile">
-                <h3>Register</h3>
-
-                <div class="login-form">
-                    <form action="/" method="post">
-                        <input type="text" name="email" placeholder="E-mail" required="">
-                        <input type="text" name="username" placeholder="Username" required="">
-                        <input type="password" name="password" placeholder="Password" required="">
-                        <input type="password" name="passwordConf" placeholder="Confirm Password" required="">
-                        <input type="submit" value="REGISTER">
-                    </form>
-                </div>
-                <p><a href="#">By clicking register, I agree to your terms</a></p>
             </div>
         </div>
         <div class="clear"></div>
