--- a/index/index.html
+++ b/index/index.html
@@ -28,7 +28,7 @@
                         <input type="text" name="logemail" placeholder="E-mail" required="">
                         <input type="password" name="logpassword" placeholder="Password" required="">
                         <div class="tp">
-                            <input type="submit" value="LOGIN">
+                            <input type="submit" value="LOGIN" name="submit">
                             <a href="./register.html">Not Yet Registered... Create an account</a>
                         </div>
                     </form>
@@ -38,7 +38,7 @@
         <div class="clear"></div>
     </div>
     <div class="copyright">
-        <p> &copy; 2019. All rights reserved. Design by <a href="http://w3layouts.com/" target="_blank" >VAS</a></p>
+        <p> &copy; 2019. All rights reserved. Design by VAS</a></p>
     </div>
 </body>
 </html>
