--- a/index/register.html
+++ b/index/register.html
@@ -29,7 +29,7 @@
                     <input type="text" name="address" placeholder="Your Address" required="">
                     <input type="password" name="password" placeholder="Password" required="">
                     <input type="password" name="passwordConf" placeholder="Confirm Password" required="">
-                    <input type="submit" value="Create Account">
+                    <input type="submit" value="Create Account" name="submit">
                     <a href="./index.html">Back to Login</a>
                 </form>
             </div>
